# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./tasks";
 export * from "./user_stats";
 export * from "./daily_activity";
+export * from "./profiles";
